--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ script:
   # tests are not done with mvn test - dont know why
   - ./scripts/build_mvn.sh
   - docker run -it --rm -v "$PWD":/opt/app-root/src -w /opt/app-root/src -u "$(id -u "${USER}"):$(id -g "${USER}")" trion/ng-cli make fintech-ui
-  - docker run -it --rm -v "$PWD"/consent-ui:/opt/app-root/src -w /opt/app-root/src -u "$(id -u "${USER}"):$(id -g "${USER}")" trion/ng-cli-karma ng test --watch=false --browsers ChromeHeadless
+  - docker run -it --rm -v "$PWD":/opt/app-root/src -w /opt/app-root/src -u "$(id -u "${USER}"):$(id -g "${USER}")" trion/ng-cli-karma make consent-ui-test
   - docker run -it --rm -v "$PWD":/opt/app-root/src -w /opt/app-root/src -u "$(id -u "${USER}"):$(id -g "${USER}")" trion/ng-cli make consent-ui
 
 after_success:
