OBG-297: Validator fully implemented, unit tests added

--- a/opba-protocols/xs2a-protocol/src/main/resources/application.yml
+++ b/opba-protocols/xs2a-protocol/src/main/resources/application.yml
@@ -47,4 +47,4 @@ flowable:
   process-definition-location-prefix: classpath*:/processes/**/
 
 hibernate-validation:
-  invalid-consent-mesage: Ais consent has invalid structure
+  invalid-consent-message: Account consent body structure is invalid
