OBG-475. Prepare backend for redirect after consent page

--- a/fintech-examples/fintech-server/src/main/resources/application.yml
+++ b/fintech-examples/fintech-server/src/main/resources/application.yml
@@ -50,5 +50,6 @@ spring:
       ddl-auto: validate
 
 fintech-ui:
-  redirect-url: http://localhost:4444/{redirectUri}/{redirectCode}
+  redirect-url: http://localhost:4444/redirect-after-consent?redirectCode={redirectCode}
+  unauthorized-url: http://localhost:4444/
   exception-url: http://localhost:4444/excaption-redirect
