--- a/fintech-examples/fintech-impl/src/test/resources/application.yml
+++ b/fintech-examples/fintech-impl/src/test/resources/application.yml
@@ -24,6 +24,6 @@ mock:
     listaccounts: true
 
 fintech-ui:
-  redirect-url: http://localhost:4444/{redirectUri}/{redirectCode}
+  redirect-url: http://localhost:4444?redirectCode={redirectCode}
   exception-url: http://localhost:4444/excaption-redirect
 
