--- a/fintech-examples/fintech-ui/package.json
+++ b/fintech-examples/fintech-ui/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "openapi-gen": "openapi-generator generate -g typescript-angular -o src/app/api -i ../fintech-api/src/main/resources/static/fintech_api.yml",
     "start": "npm run serve",
-    "serve": "ng serve --proxy-config=proxy.conf.json",
+    "serve": "ng serve --port=4444 --proxy-config=proxy.conf.json",
     "serve:dev": "ng serve --proxy-config=proxy-dev.conf.json",
     "serve:docker": "ng serve --proxy-config=proxy-docker.conf.json",
     "build": "ng build",
