--- a/opba-protocols/xs2a-protocol/pom.xml
+++ b/opba-protocols/xs2a-protocol/pom.xml
@@ -210,6 +210,7 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <excludeScope>test</excludeScope>
                     <includes>
                         <include>processes/xs2a/**/*.xml</include>
                         <include>*.yml</include>
