--- a/opba-protocols/xs2a-sandbox-protocol/pom.xml
+++ b/opba-protocols/xs2a-sandbox-protocol/pom.xml
@@ -24,6 +24,57 @@
             <artifactId>xs2a-protocol</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>de.adorsys.opba</groupId>
+            <artifactId>xs2a-bdd-tests-common</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>de.adorsys.opba</groupId>
+            <artifactId>xs2a-bdd-wiremock</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>junit</groupId>
+                    <artifactId>junit</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.tomakehurst</groupId>
+            <artifactId>wiremock</artifactId>
+            <version>${wiremock.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${testcontainers.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${testcontainers.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -35,17 +86,67 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-remote-resources-plugin</artifactId>
                 <version>${maven-remote-resources-plugin.version}</version>
-                <configuration>
-                    <resourceBundles>
-                        <resourceBundle>de.adorsys.opba:xs2a-protocol:${project.version}</resourceBundle>
-                    </resourceBundles>
-                </configuration>
                 <executions>
                     <execution>
+                        <!-- Imports XS2a process definition to override bean names-->
+                        <id>processes</id>
                         <phase>generate-resources</phase>
                         <goals>
                             <goal>process</goal>
+                            <goal>bundle</goal>
                         </goals>
+                        <configuration>
+                            <resourceBundles>
+                                <resourceBundle>de.adorsys.opba:xs2a-protocol:${project.version}</resourceBundle>
+                            </resourceBundles>
+                            <outputDirectory>${project.build.directory}/shared-processes</outputDirectory>
+                            <attachToMain>false</attachToMain>
+                            <attachToTest>false</attachToTest>
+                        </configuration>
+                    </execution>
+                    <!-- Tests support import - to make tests run -->
+                    <execution>
+                        <!-- Imports test profiles and fixtures-->
+                        <id>tests</id>
+                        <phase>generate-test-resources</phase>
+                        <goals>
+                            <goal>process</goal>
+                        </goals>
+                        <configuration>
+                            <resourceBundles>
+                                <resourceBundle>de.adorsys.opba:xs2a-bdd-tests-common:${project.version}</resourceBundle>
+                                <resourceBundle>de.adorsys.opba:xs2a-bdd-wiremock:${project.version}</resourceBundle>
+                            </resourceBundles>
+                            <outputDirectory>${project.build.directory}/shared-test-resources</outputDirectory>
+                            <attachToMain>false</attachToMain>
+                            <attachToTest>false</attachToTest>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <!-- Include only necessary test resources -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.7</version>
+                <executions>
+                    <execution>
+                        <id>copy-resources</id>
+                        <phase>process-test-resources</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/test-classes</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>${project.build.directory}/shared-test-resources</directory>
+                                    <excludes>
+                                        <exclude>**/*.xml</exclude>
+                                    </excludes>
+                                </resource>
+                            </resources>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -67,35 +168,10 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <filesToInclude>${project.basedir}/target/classes/processes/xs2a/accounts/xs2a-list-transactions.bpmn20.xml</filesToInclude>
+                    <filesToInclude>${project.build.directory}/shared-processes/processes/xs2a/accounts/xs2a-list-transactions.bpmn20.xml</filesToInclude>
                     <tokenValueMap>${project.basedir}/src/main/resources/context.properties</tokenValueMap>
-                    <inputFilePattern>(.*)/([A-Za-z0-9\.\-]+)$</inputFilePattern>
-                    <outputFilePattern>$1/sandbox-$2</outputFilePattern>
-                </configuration>
-            </plugin>
-            <!--
-            Remove ALL original imported XS2A flow resource files. Keep only one that is overriding.
-            Flowable will still be able to see original flows.
-             -->
-            <plugin>
-                <artifactId>maven-clean-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>clean</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <excludeDefaultDirectories>true</excludeDefaultDirectories>
-                    <filesets>
-                        <fileset>
-                            <directory>target/classes/processes</directory>
-                            <includes>**/*.xml</includes>
-                            <excludes>**/sandbox*.xml</excludes>
-                        </fileset>
-                    </filesets>
+                    <inputFilePattern>${project.build.directory}/shared-processes/processes/(.*)/([A-Za-z0-9\.\-]+)$</inputFilePattern>
+                    <outputFilePattern>${project.build.directory}/classes/processes/$1/sandbox-$2</outputFilePattern>
                 </configuration>
             </plugin>
             <!-- FLOW CUSTOMIZATION END -->
