Loop on invalid credentials

--- a/opba-embedded-starter/src/main/resources/application.yml
+++ b/opba-embedded-starter/src/main/resources/application.yml
@@ -56,6 +56,8 @@ protocol:
   embedded-ui-base-url: http://localhost:4200
   expirable:
     expire-after-write: PT600S
+  aspspmessages:
+    invalid-credentials: PSU_CREDENTIALS_INVALID
 
 pkcs12:
   keyStore: sample-qwac.keystore
