OBG-501. Expand tests

--- a/opba-banking-protocol-facade/src/test/resources/application-test.yml
+++ b/opba-banking-protocol-facade/src/test/resources/application-test.yml
@@ -5,6 +5,9 @@ spring:
     password: docker
     driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
 
+protocol:
+  embedded-ui-base-url: http://localhost:1010
+
 facade:
   encryption:
     providerName: BC
