--- a/fintech-examples/fintech-db-schema/pom.xml
+++ b/fintech-examples/fintech-db-schema/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>de.adorsys.opba</groupId>
         <artifactId>fintech-examples</artifactId>
-        <version>0.0.6-SNAPSHOT</version>
+        <version>0.0.6</version>
     </parent>
 
     <packaging>jar</packaging>
