--- a/opba-embedded-starter-tests/pom.xml
+++ b/opba-embedded-starter-tests/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>de.adorsys.opba</groupId>
         <artifactId>open-banking-gateway</artifactId>
-        <version>0.0.6-SNAPSHOT</version>
+        <version>0.0.6</version>
     </parent>
 
     <artifactId>opba-embedded-starter-tests</artifactId>
