--- a/opba-facade-protocol-api-shared/pom.xml
+++ b/opba-facade-protocol-api-shared/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>open-banking-gateway</artifactId>
         <groupId>de.adorsys.opba</groupId>
-        <version>0.0.6-SNAPSHOT</version>
+        <version>0.0.6</version>
     </parent>
 
     <artifactId>opba-facade-protocol-api-shared</artifactId>
